# ignis

./: .gitignore  CMakeLists.txt
src/: engine.hpp  main.cpp
src/platform/: windows.cpp
